# Paperlens_26.06

./: .gitignore  README.md  docker-compose.postgres.yml  paper_review_service_plan_v3.1.md  paper_review_service_plan_v4.0.md  paper_review_service_plan_v4.1.md  render.yaml  testing.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  deploy-pages.yml  reset-demo-account.yml  smoke-production.yml
backend/: .env.example  pyproject.toml  requirements-ocr.txt  requirements.txt
backend/app/: auth.py  config.py  db.py  main.py
backend/app/repositories/: __init__.py  base.py  factory.py  postgresql_notes.py  sqlite_notes.py
backend/app/routers/: ai.py  notes.py  papers.py  research.py
backend/app/services/: __init__.py  ai_rate_limit.py  figure_images.py  paper_metadata.py  paper_sections.py  pdf_security.py
backend/scripts/: create_supabase_smoke_user.py  reset_demo_account.py  smoke_api.py  smoke_deployment.py  smoke_postgres.py
backend/tests/: test_ai.py  test_ai_rate_limit.py  test_auth.py  test_db.py  test_diagnostics.py  test_figure_images.py  test_papers.py  test_pdf_extraction_regression.py  test_research.py
demo/: index.html
docs/: architecture.md  deployment.md  next-work-prompt.md  testing.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: constants.ts  main.tsx  styles.css  types.ts
frontend/src/components/: AiDraftButton.tsx  App.tsx  AppErrorBoundary.tsx  AuthControls.test.tsx  AuthControls.tsx  BrandLogo.tsx  (+10 more)
(+56 files in other folders)
