[project]
name = "paperlens-backend"
version = "0.1.0"
description = "FastAPI backend for the PaperLens core MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "pydantic-settings>=2.7.0",
  "pymupdf>=1.25.1",
  "python-multipart>=0.0.20",
  "psycopg[binary]>=3.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "httpx>=0.28.0",
  "ruff>=0.8.4"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
